--- a/client/dev/partials/projects/indicators/edition-modal.html
+++ b/client/dev/partials/projects/indicators/edition-modal.html
@@ -47,16 +47,14 @@
 			<div class="form-group" ng-if="!planning.formula">
 				<label for="source2-input" class="col-sm-2 control-label" translate="project.variable"></label>
 				<div class="col-sm-10" acl-has-project-role="owner" acl-fallback="planning.variable">
-					<select class="form-control input-sm"
-						ng-model="planning.variable"
-						ng-options="v.id as v.name group by v.group for v in sources"></select>
+					<project-activity-variable project="project" planning="planning"></project-activity-variable>
 				</div>
 			</div>
 
 			<div class="form-group" ng-if="planning.variable">
 				<label for="source2-input" class="col-sm-2 control-label" translate="shared.filter"></label>
 				<div class="col-sm-10" acl-has-project-role="owner" acl-fallback="planning.filter">
-					<form-edit-filter element="getElement(planning.variable)" value="planning.filter"></form-edit-filter>
+					<project-activity-filter project="project" planning="planning"></project-activity-filter>
 				</div>
 			</div>
 
@@ -72,12 +70,10 @@
 					<tr ng-repeat="(paramKey, value) in planning.parameters">
 						<td ng-bind="indicator.formulas[planning.formula].parameters[paramKey][language]"></td>
 						<td>
-							<select class="form-control input-sm"
-									ng-model="value.id"
-									ng-options="v.id as v.name group by v.group for v in sources"></select>
+							<project-activity-variable project="project" planning="value"></project-activity-variable>
 						</td>
 						<td style="padding: 0">
-							<form-edit-filter element="getElement(value.id)" value="value.filter"></form-edit-filter>
+							<project-activity-filter project="project" planning="value"></project-activity-filter>
 						</td>
 					<tr>
 				</tbody>
@@ -125,51 +121,6 @@
 							   placeholder="{{'project.target_ph'|translate}}"
 							   ng-required="!targetUnknown" />
 					</div>
-				</div>
-			</div>
-
-			<div class="row" style="margin-bottom: 15px;" ng-if="!baselineUnknown && !targetUnknown" acl-has-project-role="owner">
-				<label for="show_red-input" class="col-sm-2 control-label" translate="project.color"></label>
-				<div class="col-sm-10">
-					<div class="form-group" show-errors style="margin: 0">
-						<div class="input-group" style="margin-bottom: 10px">
-							<span class="input-group-addon alert-danger" style="width: 280px;" translate="project.red_for_target"></span>
-							<input id="show_red-input"
-								   class="form-control"
-								   type="number"
-								   name="show_red"
-								   ng-model="planning.showRed"
-								   ng-min="0"
-								   required />
-							<span class="input-group-addon">%</span>
-						</div>
-					</div>
-					<div class="form-group" show-errors style="margin: 0">
-						<div class="input-group" style="margin-bottom: 10px">
-							<span class="input-group-addon alert-warning" style="width: 280px;">
-								{{'project.orange_for_target'|translate:{value:planning.showRed} }}
-							</span>
-							<input id="show_yellow-input"
-								   class="form-control"
-								   type="number"
-								   name="show_yellow"
-								   ng-model="planning.showYellow"
-								   ng-min="planning.showRed"
-								   ng-max="100"
-								   required />
-
-							<span class="input-group-addon">%</span>
-						</div>
-					</div>
-					<div class="alert alert-success" style="padding: 6px 12px; text-align: center">
-						{{'project.green_for_target'|translate:{value:planning.showYellow} }}
-					</div>
-
-					<a class="pull-right" ng-click="show_more=!show_more">
-						<i class="fa fa-info"></i>
-						{{'project.what_is_progress'|translate}}
-					</a>
-					<div ng-show="show_more" style="clear: both" ng-bind-html="'project.what_is_progress_detail'|translate"></div>
 				</div>
 			</div>
 		</div>
