--- a/client/dev/partials/projects/indicators/analysis-list.html
+++ b/client/dev/partials/projects/indicators/analysis-list.html
@@ -1,6 +1,6 @@
 <ol class="breadcrumb">
 	<li><a ui-sref="main.projects" translate="shared.projects"></a></li>
-	<li><a ui-sref="main.project.logical_frame">{{project.name}}</a></li>
+	<li><a ui-sref="main.project.basics" ng-bind="project.name"></a></li>
 	<li class="active" translate="shared.reporting_analysis"></li>
 </ol>
 
