--- a/client/dev/partials/projects/activity/collection-input-edition.html
+++ b/client/dev/partials/projects/activity/collection-input-edition.html
@@ -1,7 +1,7 @@
 <ol class="breadcrumb">
 	<li><a ui-sref="main.projects" translate="shared.projects"></a></li>
-	<li><a ui-sref="main.project.logical_frame" ng-bind="project.name"></a></li>
-	<li><a ui-sref="main.project.manual_input_list" translate="project.manual_input"></a></li>
+	<li><a ui-sref="main.project.basics" ng-bind="project.name"></a></li>
+	<li><a ui-sref="main.project.collection_input_list" translate="project.collection_input_list"></a></li>
 	<li class="active" ng-bind="form.name"></li>
 	<li class="active" ng-bind="inputEntity.name" ng-if="inputEntity"></li>
 	<li class="active" ng-bind="currentInput.period|amDateFormat:'YYYY-MM-DD'"></li>
