--- a/client/dev/partials/projects/activity/collection-site-list.html
+++ b/client/dev/partials/projects/activity/collection-site-list.html
@@ -1,20 +1,20 @@
 <ol class="breadcrumb">
 	<li><a ui-sref="main.projects" translate="shared.projects"></a></li>
-	<li><a ui-sref="main.project.logical_frame({projectId: project._id})" ng-bind="project.name"></a></li>
-	<li class="active" translate="shared.input_entities"></li>
+	<li><a ui-sref="main.project.basics" ng-bind="project.name"></a></li>
+	<li class="active" translate="project.collection_site_list"></li>
 </ol>
 
 <doc-reminder pages="project.presentation_project,project.entities_groups,project.change_definition"></doc-reminder>
 
 <form name="projectForm" novalidate>
 	
-	<legend>Lieux d'activités</legend>
+	<legend translate="project.collection_site_list"></legend>
 
 	<table class="table table-bordered table-stripped table-condensed">
 		<thead>
 			<tr>
 				<th translate="project.entity_name"></th>
-				<th style="width: 100px" acl-has-project-role="owner"></th>
+				<th style="width: 90px" acl-has-project-role="owner"></th>
 			</tr>
 		</thead>
 		<tbody>
@@ -34,10 +34,15 @@
 						</div>
 					</ng-form>
 				</td>
-				<td style="text-align: center" acl-has-project-role="owner">
-					<a class="btn btn-danger btn-sm" ng-click="deleteEntity(inputEntity.id)">
+				<td style="text-align: right" acl-has-project-role="owner">
+					<a class="btn btn-default btn-sm" ng-click="up($index, project.inputEntities)" ng-if="!$first" tooltip="{{'shared.up'|translate}}">
+						<i class="fa fa-caret-square-o-up"></i>
+					</a>
+					<a class="btn btn-default btn-sm" ng-click="down($index, project.inputEntities)" ng-if="!$last" tooltip="{{'shared.down'|translate}}">
+						<i class="fa fa-caret-square-o-down"></i>
+					</a>
+					<a class="btn btn-danger btn-sm" ng-click="deleteEntity(inputEntity.id)" tooltip="{{'shared.delete'|translate}}">
 						<i class="fa fa-remove"></i>
-						<span translate="shared.delete"></span>
 					</a>
 				</td>
 			</tr>
@@ -51,14 +56,14 @@
 		</tfoot>
 	</table>
 
-	<legend>Groupes</legend>
+	<legend translate="project.groups"></legend>
 
 	<table class="table table-bordered table-stripped table-condensed">
 		<thead>
 			<tr>
 				<th style="width:300px" translate="project.group_name"></th>
 				<th translate="shared.members"></th>
-				<th style="width: 100px;" acl-has-project-role="owner"></th>
+				<th style="width: 90px;" acl-has-project-role="owner"></th>
 			</tr>
 		</thead>
 		<tbody>
@@ -90,10 +95,15 @@
 						{{inputGroup.members | getObjects:project.inputEntities | pluck:'name' | join:', '}}
 					</span>
 				</td>
-				<td style="text-align: center" acl-has-project-role="owner">
-					<a class="btn btn-danger btn-sm" ng-click="deleteGroup(inputGroup.id)">
+				<td style="text-align: right" acl-has-project-role="owner">
+					<a class="btn btn-default btn-sm" ng-click="up($index, project.inputGroups)" ng-if="!$first" tooltip="{{'shared.up'|translate}}">
+						<i class="fa fa-caret-square-o-up"></i>
+					</a>
+					<a class="btn btn-default btn-sm" ng-click="down($index, project.inputGroups)" ng-if="!$last" tooltip="{{'shared.down'|translate}}">
+						<i class="fa fa-caret-square-o-down"></i>
+					</a>
+					<a class="btn btn-danger btn-sm" ng-click="deleteGroup(inputGroup.id)" tooltip="{{'shared.delete'|translate}}">
 						<i class="fa fa-remove"></i>
-						<span translate="shared.delete"></span>
 					</a>
 				</td>
 			</tr>
