--- a/client/dev/partials/projects/indicators/logframe-edit.html
+++ b/client/dev/partials/projects/indicators/logframe-edit.html
@@ -1,18 +1,22 @@
-
-<div print-logframe class="print"></div>
-
 <ol class="breadcrumb noprint">
 	<li><a ui-sref="main.projects" translate="shared.projects"></a></li>
-	<li class="active">{{project.name}}</li>
+	<li><a ui-sref="main.project.basics" ng-bind="project.name"></a></li>
 	<li class="active" translate="shared.logical_frame"></li>
 </ol>
 
 <doc-reminder pages="project.presentation_project,project.logical_frame,project.change_definition"></doc-reminder>
 
+
 <form class="form-horizontal noprint" role="form" name="projectForm" novalidate>
 
 	<fieldset>
-		<legend translate="project.goal"></legend>
+		<legend>
+			<button class="btn btn-primary btn-xs pull-right noprint" log-frame-xls style="margin-bottom: 10px;">
+				<i class="fa fa-download"></i>
+				<span translate="shared.download_table"></span>
+			</button>
+			<span translate="project.goal"></span>
+		</legend>
 
 		<div class="form-group" show-errors>
 			<label for="logframe-goal-input" class="col-sm-2 control-label" translate="project.goal"></label>
@@ -189,7 +193,7 @@
 										<div class="input-group" style="margin-bottom: 5px; " ng-repeat="activity in output.activities">
 											<input type="text"
 												   class="form-control"
-												   name="description"
+												   name="activity"
 												   placeholder="{{'project.activity_desc_ph'|translate}}"
 												   ng-model="activity.description"
 												   required/>
