--- a/client/dev/partials/projects/menu.html
+++ b/client/dev/partials/projects/menu.html
@@ -8,26 +8,14 @@
 				</div>
 
 				<div class="panel-collapse">
-					<div class="list-group" ng-if="project._id">
+					<div class="list-group">
 						<a ui-sref="main.project.basics" ui-sref-active="active" class="list-group-item">
-							<i class="fa fa-info fa-fw"></i>
+							<i class="fa fa-info-circle fa-fw"></i>
 							<span translate="project.basics"></span>
 						</a>
 
-						<a ui-sref="main.project.user_list" ui-sref-active="active" class="list-group-item">
-							<i class="fa fa-users fa-fw"></i>
-							<span translate="project.users"></span>
-						</a>
-					</div>
-
-					<div class="list-group" ng-if="!project._id">
-						<a class="list-group-item">
-							<i class="fa fa-info fa-fw"></i>
-							<span translate="project.basics"></span>
-						</a>
-
-						<a class="list-group-item">
-							<i class="fa fa-users fa-fw"></i>
+						<a ui-sref="main.project.user_list" ui-sref-active="active" class="list-group-item" disable-if="!project._id">
+							<i class="fa fa-user fa-fw"></i>
 							<span translate="project.users"></span>
 						</a>
 					</div>
@@ -40,40 +28,39 @@
 				</div>
 
 				<div class="panel-collapse">
-					<div class="list-group" ng-if="project._id">
+					<div class="list-group">
+						<a ui-sref="main.project.collection_site_list"
+						   ui-sref-active="active"
+						   class="list-group-item"
+						   disable-if="!project._id">
 
-						<a ui-sref="main.project.input_entities" ui-sref-active="active" class="list-group-item">
 							<i class="fa fa-map-marker fa-fw"></i>
-							<span translate="shared.input_entities"></span>
+							<span translate="project.collection_site_list"></span>
 						</a>
 
-						<a ui-sref="main.project.manual_input_list"
+						<a ui-sref="main.project.collection_form_list"
 						   class="list-group-item"
-						   ng-class="{active: $state.is('main.project.manual_input_list') || $state.is('main.project.manual_input_data') || $state.is('main.project.manual_input_structure')}">
+						   ng-class="{active: $state.is('main.project.collection_form_list') || $state.is('main.project.collection_form_edition')}"
+						   disable-if="!project._id">
+							
+							<i class="fa fa-table fa-fw"></i>
+							<span translate="project.collection_form_list"></span>
+						</a>
+
+						<a ui-sref="main.project.collection_input_list"
+						   class="list-group-item"
+						   ng-class="{active: $state.is('main.project.collection_input_list') || $state.is('main.project.collection_input_edition')}"
+						   disable-if="!project._id">
 							
 							<i class="fa fa-pencil fa-fw"></i>
-							<span translate="project.manual_input"></span>
+							<span translate="project.collection_input_list"></span>
 						</a>
 
-						<a ui-sref="main.project.aggregated_data_reporting" ui-sref-active="active" class="list-group-item">
-							<i class="fa fa-line-chart fa-fw"></i>
-							<span translate="shared.reporting"></span>
-						</a>
-					</div>
+						<a ui-sref="main.project.activity_reporting"
+						   ui-sref-active="active"
+						   class="list-group-item"
+						   disable-if="!project._id">
 
-					<div class="list-group" ng-if="!project._id">
-
-						<a class="list-group-item">
-							<i class="fa fa-map-marker fa-fw"></i>
-							<span translate="shared.input_entities"></span>
-						</a>
-
-						<a class="list-group-item">
-							<i class="fa fa-pencil fa-fw"></i>
-							<span translate="project.manual_input"></span>
-						</a>
-
-						<a class="list-group-item">
 							<i class="fa fa-line-chart fa-fw"></i>
 							<span translate="shared.reporting"></span>
 						</a>
@@ -87,35 +74,19 @@
 				</div>
 
 				<div class="panel-collapse">
-					<div class="list-group" ng-if="project._id">
+					<div class="list-group">
 
-						<a ui-sref="main.project.logical_frame" ui-sref-active="active" class="list-group-item">
+						<a ui-sref="main.project.logical_frame" ui-sref-active="active" class="list-group-item" disable-if="!project._id">
 							<i class="fa fa-building-o fa-fw"></i>
 							<span translate="shared.logical_frame"></span>
 						</a>
 
-
-						<a ui-sref="main.project.indicators_reporting" ui-sref-active="active" class="list-group-item">
+						<a ui-sref="main.project.indicators_reporting" ui-sref-active="active" class="list-group-item" disable-if="!project._id">
 							<i class="fa fa-line-chart fa-fw"></i>
 							<span translate="shared.reporting"></span>
 						</a>
 
-						<a ui-sref="main.project.reporting_analysis_list" ui-sref-active="active" class="list-group-item">
-							<i class="fa fa-lightbulb-o fa-fw"></i>
-							<span translate="shared.reporting_analysis"></span>
-						</a>
-					</div>
-
-					<div class="list-group" ng-if="!project._id">
-						<a class="list-group-item">
-							<i class="fa fa-building-o fa-fw"></i>
-							<span translate="shared.logical_frame"></span>
-						</a>
-						<a class="list-group-item">
-							<i class="fa fa-line-chart fa-fw"></i>
-							<span translate="shared.reporting"></span>
-						</a>
-						<a class="list-group-item">
+						<a ui-sref="main.project.reporting_analysis_list" ui-sref-active="active" class="list-group-item" disable-if="!project._id">
 							<i class="fa fa-lightbulb-o fa-fw"></i>
 							<span translate="shared.reporting_analysis"></span>
 						</a>
@@ -125,12 +96,8 @@
 
 			<div class="panel panel-default">
 				<div class="panel-collapse">
-					<div class="list-group" ng-if="project._id">
-						<a class="list-group-item" ng-if="project._id" ui-sref="main.project.export" ui-sref-active="active">
-							<i class="fa fa-fw fa-file-excel-o"></i>
-							<span translate="shared.export"></span>
-						</a>
-						<a class="list-group-item" ng-if="!project._id">
+					<div class="list-group">
+						<a class="list-group-item" ui-sref="main.project.export" ui-sref-active="active" disable-if="!project._id">
 							<i class="fa fa-fw fa-file-excel-o"></i>
 							<span translate="shared.export"></span>
 						</a>
